fix: rewrite broken css

--- a/electron-dashboard/src/renderer/sass/_app.scss
+++ b/electron-dashboard/src/renderer/sass/_app.scss
@@ -4,10 +4,6 @@ body {
   padding: 0;
 }
 
-:global .App {
-  display: flex;
-}
-
 h1 {
   font-size: 2em;
   font-weight: lighter;
