--- a/electron-dashboard/src/renderer/sass/pages/_login.scss
+++ b/electron-dashboard/src/renderer/sass/pages/_login.scss
@@ -1,76 +1,84 @@
-:global .login-card {
-  background: #ffffff;
-  border-radius: 5px;
-  width: 400px;
-  overflow: hidden;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 95px rgba(0, 0, 0, 0.12);
-}
-
-:global .card-header {
-  background: #11225a;
-  padding: 20px;
-  color: #fff;
-  text-align: center;
-}
-
-:global .card-body {
-  input,
-  button,
-  span {
-    margin: 5px 0px 5px 0px;
+:global {
+  .login-card {
+    background: #ffffff;
+    border-radius: 5px;
+    width: 400px;
+    overflow: hidden;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 95px rgba(0, 0, 0, 0.12);
   }
-  input {
-    height: 40px;
-    border-radius: 0px;
-    border: none;
-    border-bottom: grey 1px solid;
-    font-size: 1.2em;
-    &:focus {
-      background-color: rgb(229, 236, 248);
-      transition: linear 0.2s;
+
+  .card-header {
+    background: #11225a;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+  }
+
+  .card-body {
+    input,
+    button,
+    span {
+      margin: 5px 0px 5px 0px;
     }
+    input {
+      height: 40px;
+      border-radius: 0px;
+      border: none;
+      border-bottom: grey 1px solid;
+      font-size: 1.2em;
+      &:focus {
+        background-color: rgb(229, 236, 248);
+        transition: linear 0.2s;
+      }
+    }
+
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin: 40px 0px 30px 0px;
   }
 
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  margin: 40px 0px 30px 0px;
-}
-
-:global .settings-banner {
-  display: auto;
-  font-size: 0.9rem;
-  margin-top: 10px;
-}
-
-:global .autologin {
-  input {
-    margin-right: 0.5rem;
-    float: left;
-  }
-  label {
-    padding-top: 11px;
-    float: left;
-  }
-  float: left;
-}
-
-:global .password-retrieval {
-  padding-top: 11px;
-  float: right;
-}
-
-:global .login-submit {
-  input {
-    margin: 0.4rem;
-  }
-  span {
+  .settings-banner {
+    display: auto;
     font-size: 0.9rem;
+    margin-top: 10px;
   }
-  margin-top: 30px;
-  padding: 0px 10px 0px 10px;
-  align-items: center;
+
+  .autologin {
+    float: left;
+  }
+
+  .remember-me {
+    input {
+      vertical-align: middle;
+      margin: 0;
+    }
+    span {
+      vertical-align: middle;
+      margin-left: 10px;
+    }
+    display: inline-block;
+    white-space: nowrap;
+    float: left;
+  }
+
+  .password-retrieval {
+    padding-top: 11px;
+    float: right;
+  }
+
+  .login-submit {
+    input {
+      margin: 0.4rem;
+    }
+    span {
+      font-size: 0.9rem;
+    }
+    margin-top: 30px;
+    padding: 0px 10px 0px 10px;
+    align-items: center;
+  }
 }
